T2_sintatico/src/sintatico.output
Terminals unused in grammar

    MAIN
    ASPA_SIMPLES
    STRING


Grammar

    0 $accept: programa $end

    1 programa: lista_de_declaracoes

    2 lista_de_declaracoes: lista_de_declaracoes declaracao
    3                     | %empty

    4 declaracao: declaracao_de_variavel
    5           | declaracao_de_funcao
    6           | error

    7 declaracao_de_variavel: tipo_de_variavel_id PONTO_VIRGULA

    8 declaracao_de_funcao: tipo_de_variavel_id ABRE_PARENTESES parametros FECHA_PARENTESES definicao_de_funcao

    9 tipo_de_variavel_id: tipo_de_variavel id

   10 id: ID

   11 definicao_de_funcao: bloco_de_comando

   12 parametros: lista_de_parametros
   13           | %empty

   14 lista_de_parametros: lista_de_parametros VIRGULA parametro
   15                    | parametro

   16 parametro: tipo_de_variavel_id

   17 comando: bloco_de_comando
   18        | comando_unico
   19        | error

   20 comandos: comandos comando
   21         | %empty

   22 bloco_de_comando: ABRE_CHAVES comandos FECHA_CHAVES

   23 comando_unico: comando_condicional
   24              | comando_iterativo
   25              | declaracao_de_variavel
   26              | chamada_de_retorno
   27              | comando_de_atribuicao
   28              | expressao PONTO_VIRGULA

   29 comando_condicional: IF ABRE_PARENTESES expressao FECHA_PARENTESES comando
   30                    | IF ABRE_PARENTESES expressao FECHA_PARENTESES comando ELSE comando

   31 comando_iterativo: FOR ABRE_PARENTESES expressao_for PONTO_VIRGULA expressao_for PONTO_VIRGULA expressao_for FECHA_PARENTESES comando

   32 expressao_for: id ATRIB expressao
   33              | expressao

   34 expressao: expressao VIRGULA exp
   35          | exp
   36          | %empty

   37 exp: exp GT exp
   38    | exp LT exp
   39    | exp EQ exp
   40    | exp NE exp
   41    | exp LE exp
   42    | exp GE exp
   43    | exp AND exp
   44    | exp OR exp
   45    | exp_list

   46 exp_list: exp_list CONSTRUTOR exp_list
   47         | exp_list FILTER exp_list
   48         | exp_list MAP exp_list
   49         | exp_aritmetica

   50 exp_aritmetica: termo
   51               | exp_aritmetica SOMA termo
   52               | exp_aritmetica SUB termo

   53 termo: fator
   54      | termo MULT fator
   55      | termo DIV fator

   56 fator: constante
   57      | SUB fator
   58      | SOMA fator
   59      | TAIL_OR_NOT fator
   60      | TAIL_POP fator
   61      | HEADER fator
   62      | ID
   63      | ABRE_PARENTESES exp FECHA_PARENTESES

   64 comando_de_atribuicao: id ATRIB expressao PONTO_VIRGULA

   65 exp_funcao: id ABRE_PARENTESES expressao FECHA_PARENTESES
   66           | READ ABRE_PARENTESES expressao FECHA_PARENTESES
   67           | WRITE ABRE_PARENTESES expressao FECHA_PARENTESES
   68           | WRITELN ABRE_PARENTESES expressao FECHA_PARENTESES

   69 chamada_de_retorno: RETURN expressao PONTO_VIRGULA

   70 tipo_de_variavel: INT
   71                 | FLOAT
   72                 | int_list
   73                 | float_list

   74 int_list: INT LIST

   75 float_list: FLOAT LIST

   76 constante: INTEGER_CONST
   77          | FLOAT_CONST
   78          | CONSTANTE_NIL
   79          | STRING_LITERAL
   80          | exp_funcao


Terminals, with rules where they appear

    $end (0) 0
    error (256) 6 19
    ID <node> (258) 10 62
    INT <node> (259) 70 74
    FLOAT <node> (260) 71 75
    LIST <node> (261) 74 75
    CONSTANTE_NIL <node> (262) 78
    TAIL_OR_NOT <node> (263) 59
    HEADER <node> (264) 61
    TAIL_POP <node> (265) 60
    MAP <node> (266) 48
    FILTER <node> (267) 47
    CONSTRUTOR <node> (268) 46
    READ <node> (269) 66
    WRITE <node> (270) 67
    WRITELN <node> (271) 68
    MAIN <node> (272)
    RETURN <node> (273) 69
    IF <node> (274) 29 30
    ELSE <node> (275) 30
    FOR <node> (276) 31
    AND <node> (277) 43
    OR <node> (278) 44
    LT <node> (279) 38
    LE <node> (280) 41
    EQ <node> (281) 39
    GT <node> (282) 37
    GE <node> (283) 42
    NE <node> (284) 40
    SOMA <node> (285) 51 58
    SUB <node> (286) 52 57
    MULT <node> (287) 54
    DIV <node> (288) 55
    VIRGULA <node> (289) 14 34
    PONTO_VIRGULA <node> (290) 7 28 31 64 69
    ASPA_SIMPLES <node> (291)
    ATRIB <node> (292) 32 64
    ABRE_PARENTESES <node> (293) 8 29 30 31 63 65 66 67 68
    FECHA_PARENTESES <node> (294) 8 29 30 31 63 65 66 67 68
    ABRE_CHAVES <node> (295) 22
    FECHA_CHAVES <node> (296) 22
    FLOAT_CONST <node> (297) 77
    INTEGER_CONST <node> (298) 76
    STRING_LITERAL <node> (299) 79
    STRING <node> (300)
    IFX (301)


Nonterminals, with rules where they appear

    $accept (47)
        on left: 0
    programa <node> (48)
        on left: 1
        on right: 0
    lista_de_declaracoes <node> (49)
        on left: 2 3
        on right: 1 2
    declaracao <node> (50)
        on left: 4 5 6
        on right: 2
    declaracao_de_variavel <node> (51)
        on left: 7
        on right: 4 25
    declaracao_de_funcao <node> (52)
        on left: 8
        on right: 5
    tipo_de_variavel_id <node> (53)
        on left: 9
        on right: 7 8 16
    id <node> (54)
        on left: 10
        on right: 9 32 64 65
    definicao_de_funcao <node> (55)
        on left: 11
        on right: 8
    parametros <node> (56)
        on left: 12 13
        on right: 8
    lista_de_parametros <node> (57)
        on left: 14 15
        on right: 12 14
    parametro <node> (58)
        on left: 16
        on right: 14 15
    comando <node> (59)
        on left: 17 18 19
        on right: 20 29 30 31
    comandos <node> (60)
        on left: 20 21
        on right: 20 22
    bloco_de_comando <node> (61)
        on left: 22
        on right: 11 17
    comando_unico <node> (62)
        on left: 23 24 25 26 27 28
        on right: 18
    comando_condicional <node> (63)
        on left: 29 30
        on right: 23
    comando_iterativo <node> (64)
        on left: 31
        on right: 24
    expressao_for <node> (65)
        on left: 32 33
        on right: 31
    expressao <node> (66)
        on left: 34 35 36
        on right: 28 29 30 32 33 34 64 65 66 67 68 69
    exp <node> (67)
        on left: 37 38 39 40 41 42 43 44 45
        on right: 34 35 37 38 39 40 41 42 43 44 63
    exp_list <node> (68)
        on left: 46 47 48 49
        on right: 45 46 47 48
    exp_aritmetica <node> (69)
        on left: 50 51 52
        on right: 49 51 52
    termo <node> (70)
        on left: 53 54 55
        on right: 50 51 52 54 55
    fator <node> (71)
        on left: 56 57 58 59 60 61 62 63
        on right: 53 54 55 57 58 59 60 61
    comando_de_atribuicao <node> (72)
        on left: 64
        on right: 27
    exp_funcao <node> (73)
        on left: 65 66 67 68
        on right: 80
    chamada_de_retorno <node> (74)
        on left: 69
        on right: 26
    tipo_de_variavel <node> (75)
        on left: 70 71 72 73
        on right: 9
    int_list (76)
        on left: 74
        on right: 72
    float_list (77)
        on left: 75
        on right: 73
    constante <node> (78)
        on left: 76 77 78 79 80
        on right: 56


State 0

    0 $accept: • programa $end

    $end   reduce using rule 3 (lista_de_declaracoes)
    error  reduce using rule 3 (lista_de_declaracoes)
    INT    reduce using rule 3 (lista_de_declaracoes)
    FLOAT  reduce using rule 3 (lista_de_declaracoes)

    programa              go to state 1
    lista_de_declaracoes  go to state 2


State 1

    0 $accept: programa • $end

    $end  shift, and go to state 3


State 2

    1 programa: lista_de_declaracoes •
    2 lista_de_declaracoes: lista_de_declaracoes • declaracao

    error  shift, and go to state 4
    INT    shift, and go to state 5
    FLOAT  shift, and go to state 6

    $end  reduce using rule 1 (programa)

    declaracao              go to state 7
    declaracao_de_variavel  go to state 8
    declaracao_de_funcao    go to state 9
    tipo_de_variavel_id     go to state 10
    tipo_de_variavel        go to state 11
    int_list                go to state 12
    float_list              go to state 13


State 3

    0 $accept: programa $end •

    $default  accept


State 4

    6 declaracao: error •

    $end   reduce using rule 6 (declaracao)
    error  reduce using rule 6 (declaracao)
    INT    reduce using rule 6 (declaracao)
    FLOAT  reduce using rule 6 (declaracao)


State 5

   70 tipo_de_variavel: INT •
   74 int_list: INT • LIST

    LIST  shift, and go to state 14

    ID  reduce using rule 70 (tipo_de_variavel)


State 6

   71 tipo_de_variavel: FLOAT •
   75 float_list: FLOAT • LIST

    LIST  shift, and go to state 15

    ID  reduce using rule 71 (tipo_de_variavel)


State 7

    2 lista_de_declaracoes: lista_de_declaracoes declaracao •

    $end   reduce using rule 2 (lista_de_declaracoes)
    error  reduce using rule 2 (lista_de_declaracoes)
    INT    reduce using rule 2 (lista_de_declaracoes)
    FLOAT  reduce using rule 2 (lista_de_declaracoes)


State 8

    4 declaracao: declaracao_de_variavel •

    $end   reduce using rule 4 (declaracao)
    error  reduce using rule 4 (declaracao)
    INT    reduce using rule 4 (declaracao)
    FLOAT  reduce using rule 4 (declaracao)


State 9

    5 declaracao: declaracao_de_funcao •

    $end   reduce using rule 5 (declaracao)
    error  reduce using rule 5 (declaracao)
    INT    reduce using rule 5 (declaracao)
    FLOAT  reduce using rule 5 (declaracao)


State 10

    7 declaracao_de_variavel: tipo_de_variavel_id • PONTO_VIRGULA
    8 declaracao_de_funcao: tipo_de_variavel_id • ABRE_PARENTESES parametros FECHA_PARENTESES definicao_de_funcao

    PONTO_VIRGULA    shift, and go to state 16
    ABRE_PARENTESES  shift, and go to state 17


State 11

    9 tipo_de_variavel_id: tipo_de_variavel • id

    ID  shift, and go to state 18

    id  go to state 19


State 12

   72 tipo_de_variavel: int_list •

    ID  reduce using rule 72 (tipo_de_variavel)


State 13

   73 tipo_de_variavel: float_list •

    ID  reduce using rule 73 (tipo_de_variavel)


State 14

   74 int_list: INT LIST •

    ID  reduce using rule 74 (int_list)


State 15

   75 float_list: FLOAT LIST •

    ID  reduce using rule 75 (float_list)


State 16

    7 declaracao_de_variavel: tipo_de_variavel_id PONTO_VIRGULA •

    $end   reduce using rule 7 (declaracao_de_variavel)
    error  reduce using rule 7 (declaracao_de_variavel)
    INT    reduce using rule 7 (declaracao_de_variavel)
    FLOAT  reduce using rule 7 (declaracao_de_variavel)


State 17

    8 declaracao_de_funcao: tipo_de_variavel_id ABRE_PARENTESES • parametros FECHA_PARENTESES definicao_de_funcao

    INT    shift, and go to state 5
    FLOAT  shift, and go to state 6

    FECHA_PARENTESES  reduce using rule 13 (parametros)

    tipo_de_variavel_id  go to state 20
    parametros           go to state 21
    lista_de_parametros  go to state 22
    parametro            go to state 23
    tipo_de_variavel     go to state 144
    int_list             go to state 12
    float_list           go to state 13


State 18

   10 id: ID •

    PONTO_VIRGULA    reduce using rule 10 (id)
    ABRE_PARENTESES  reduce using rule 10 (id)


State 19

    9 tipo_de_variavel_id: tipo_de_variavel id •

    PONTO_VIRGULA    reduce using rule 9 (tipo_de_variavel_id)
    ABRE_PARENTESES  reduce using rule 9 (tipo_de_variavel_id)


State 20

   16 parametro: tipo_de_variavel_id •

    VIRGULA           reduce using rule 16 (parametro)
    FECHA_PARENTESES  reduce using rule 16 (parametro)


State 21

    8 declaracao_de_funcao: tipo_de_variavel_id ABRE_PARENTESES parametros • FECHA_PARENTESES definicao_de_funcao

    FECHA_PARENTESES  shift, and go to state 24


State 22

   12 parametros: lista_de_parametros •
   14 lista_de_parametros: lista_de_parametros • VIRGULA parametro

    VIRGULA  shift, and go to state 25

    FECHA_PARENTESES  reduce using rule 12 (parametros)


State 23

   15 lista_de_parametros: parametro •

    VIRGULA           reduce using rule 15 (lista_de_parametros)
    FECHA_PARENTESES  reduce using rule 15 (lista_de_parametros)


State 24

    8 declaracao_de_funcao: tipo_de_variavel_id ABRE_PARENTESES parametros FECHA_PARENTESES • definicao_de_funcao

    ABRE_CHAVES  shift, and go to state 26

    definicao_de_funcao  go to state 27
    bloco_de_comando     go to state 28


State 25

   14 lista_de_parametros: lista_de_parametros VIRGULA • parametro

    INT    shift, and go to state 5
    FLOAT  shift, and go to state 6

    tipo_de_variavel_id  go to state 20
    parametro            go to state 29
    tipo_de_variavel     go to state 144
    int_list             go to state 12
    float_list           go to state 13


State 26

   22 bloco_de_comando: ABRE_CHAVES • comandos FECHA_CHAVES

    error            reduce using rule 21 (comandos)
    ID               reduce using rule 21 (comandos)
    INT              reduce using rule 21 (comandos)
    FLOAT            reduce using rule 21 (comandos)
    CONSTANTE_NIL    reduce using rule 21 (comandos)
    TAIL_OR_NOT      reduce using rule 21 (comandos)
    HEADER           reduce using rule 21 (comandos)
    TAIL_POP         reduce using rule 21 (comandos)
    READ             reduce using rule 21 (comandos)
    WRITE            reduce using rule 21 (comandos)
    WRITELN          reduce using rule 21 (comandos)
    RETURN           reduce using rule 21 (comandos)
    IF               reduce using rule 21 (comandos)
    FOR              reduce using rule 21 (comandos)
    SOMA             reduce using rule 21 (comandos)
    SUB              reduce using rule 21 (comandos)
    VIRGULA          reduce using rule 21 (comandos)
    PONTO_VIRGULA    reduce using rule 21 (comandos)
    ABRE_PARENTESES  reduce using rule 21 (comandos)
    ABRE_CHAVES      reduce using rule 21 (comandos)
    FECHA_CHAVES     reduce using rule 21 (comandos)
    FLOAT_CONST      reduce using rule 21 (comandos)
    INTEGER_CONST    reduce using rule 21 (comandos)
    STRING_LITERAL   reduce using rule 21 (comandos)

    comandos  go to state 30


State 27

    8 declaracao_de_funcao: tipo_de_variavel_id ABRE_PARENTESES parametros FECHA_PARENTESES definicao_de_funcao •

    $end   reduce using rule 8 (declaracao_de_funcao)
    error  reduce using rule 8 (declaracao_de_funcao)
    INT    reduce using rule 8 (declaracao_de_funcao)
    FLOAT  reduce using rule 8 (declaracao_de_funcao)


State 28

   11 definicao_de_funcao: bloco_de_comando •

    $end   reduce using rule 11 (definicao_de_funcao)
    error  reduce using rule 11 (definicao_de_funcao)
    INT    reduce using rule 11 (definicao_de_funcao)
    FLOAT  reduce using rule 11 (definicao_de_funcao)


State 29

   14 lista_de_parametros: lista_de_parametros VIRGULA parametro •

    VIRGULA           reduce using rule 14 (lista_de_parametros)
    FECHA_PARENTESES  reduce using rule 14 (lista_de_parametros)


State 30

   20 comandos: comandos • comando
   22 bloco_de_comando: ABRE_CHAVES comandos • FECHA_CHAVES

    error            shift, and go to state 31
    ID               shift, and go to state 32
    INT              shift, and go to state 5
    FLOAT            shift, and go to state 6
    CONSTANTE_NIL    shift, and go to state 33
    TAIL_OR_NOT      shift, and go to state 34
    HEADER           shift, and go to state 35
    TAIL_POP         shift, and go to state 36
    READ             shift, and go to state 37
    WRITE            shift, and go to state 38
    WRITELN          shift, and go to state 39
    RETURN           shift, and go to state 40
    IF               shift, and go to state 41
    FOR              shift, and go to state 42
    SOMA             shift, and go to state 43
    SUB              shift, and go to state 44
    ABRE_PARENTESES  shift, and go to state 45
    ABRE_CHAVES      shift, and go to state 145
    FECHA_CHAVES     shift, and go to state 46
    FLOAT_CONST      shift, and go to state 47
    INTEGER_CONST    shift, and go to state 48
    STRING_LITERAL   shift, and go to state 49

    VIRGULA        reduce using rule 36 (expressao)
    PONTO_VIRGULA  reduce using rule 36 (expressao)

    declaracao_de_variavel  go to state 50
    tipo_de_variavel_id     go to state 51
    id                      go to state 52
    comando                 go to state 53
    bloco_de_comando        go to state 54
    comando_unico           go to state 55
    comando_condicional     go to state 56
    comando_iterativo       go to state 57
    expressao               go to state 58
    exp                     go to state 59
    exp_list                go to state 60
    exp_aritmetica          go to state 61
    termo                   go to state 62
    fator                   go to state 63
    comando_de_atribuicao   go to state 64
    exp_funcao              go to state 65
    chamada_de_retorno      go to state 66
    tipo_de_variavel        go to state 146
    int_list                go to state 12
    float_list              go to state 13
    constante               go to state 67


State 31

   19 comando: error •
